<resources>
    <string name="app_name">CajaSupermercado</string>
    <string name="titulo_compra">Carrito de la compra</string>
    <string name="add">AÑADIR</string>
    <string name="total">"Total: "</string>
    <string name="zero">0</string>
    <string name="euro">€</string>
    <string name="pagar">PAGAR Y FINALIZAR</string>
    <string name="lblProduct">Producto</string>
    <string name="lblProductPriceUni">Precio und</string>
    <string name="lblCantidadItem">Cantidad</string>
    <string name="lblTotal">Precio</string>
    <string name="Ejemplo">Nombre</string>
    <string name="NumEjemplo">32</string>
    <string name="titulo_add_product">Añadir un nuevo producto al carrito</string>
    <string name="unidades">Unidades</string>
    <string name="uno">1</string>
    <string name="stock">Stock</string>
    <string name="w_stock">Aviso Stock</string>
    <string name="no_stock">No hay stock suficiente</string>
    <string name="cant_delete_product_from_carrito">No se ha podido eliminar el producto del carrito</string>
    <string name="delete_product_from_carrito">Borrando producto del carrito</string>
    <string name="delete_product_from_carrito_message">"¿Seguro que desea borrar "</string>
    <string name="delete">BORRAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="checkout">Pasarela de pago</string>
    <string name="coma">,</string>
    <string name="pagado">Introducir importe pagado</string>
    <string name="cambio">Cambio</string>
    <string name="a_pagar">"Importe a pagar: "</string>
    <string name="calcular_cambio">Calcular cambio</string>
    <string name="edit_product_from_carrito">Editando producto del carrito</string>
    <string name="edit_product_from_carrito_message">"¿Qué cantidad de "</string>
    <string name="edit">EDITAR</string>
    <string name="cant_edit_product_from_carrito">No hay suficiente stock</string>
    <string name="quantity">Cantidad</string>
    <string name="cant_edit_without_quantity">Debe introducir una cantidad válida</string>
</resources>