<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llProductItem"
    android:background="@color/black"
    android:gravity="center">
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="2"
        android:padding="16dp"
        android:id="@+id/grid"
        >


        <!-- Primera fila -->
        <TextView
            android:layout_width="@dimen/colWidth"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/lblProduct"
            android:gravity="center"
            android:padding="2dp"
            android:background="@color/background_row_labels_grid"
           />

        <TextView
            android:layout_width="@dimen/colWidth"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/lblProductPriceUni"
            android:gravity="center"
            android:padding="2dp"
            android:background="@color/background_row_labels_grid"

            />

        <TextView
            android:layout_width="@dimen/colWidth"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/lblCantidadItem"
            android:gravity="center"
            android:padding="2dp"
            android:background="@color/background_row_labels_grid"

            />

        <TextView
            android:layout_width="@dimen/colWidth"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/lblTotal"
            android:gravity="center"
            android:padding="2dp"
            android:background="@color/background_row_labels_grid"

            />

        <!-- Segunda fila -->
        <TextView
            android:layout_width="@dimen/colWidth"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:id="@+id/lvProductsName"
            android:text="@string/Ejemplo"
            android:gravity="center"
            android:padding="2dp"
            android:background="@color/background_row_values_grid"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="@dimen/colWidth"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:id="@+id/lvProductsPriceUni"
            android:text="@string/NumEjemplo"
            android:gravity="center"
            android:padding="2dp"
            android:background="@color/background_row_values_grid"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="@dimen/colWidth"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:id="@+id/lvProductsCant"
            android:text="@string/NumEjemplo"
            android:gravity="center"
            android:padding="2dp"
            android:background="@color/background_row_values_grid"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="@dimen/colWidth"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:id="@+id/lvProductsPriceTotal"
            android:text="@string/NumEjemplo"
            android:gravity="center"
            android:padding="2dp"
            android:background="@color/background_row_values_grid"
            android:textColor="@color/white"
            />

    </GridLayout>
</LinearLayout>
